@@ -1,18 +1,14 @@
 package com.example.fiap.archburgers.adapters.datasource;
 
-import com.example.fiap.archburgers.domain.entities.ItemCardapio;
 import com.example.fiap.archburgers.domain.entities.ItemPedido;
 import com.example.fiap.archburgers.domain.entities.Pedido;
 import com.example.fiap.archburgers.domain.valueobjects.IdFormaPagamento;
 import com.example.fiap.archburgers.domain.valueobjects.StatusPedido;
-import com.example.fiap.archburgers.domain.valueobjects.TipoItemCardapio;
-import com.example.fiap.archburgers.domain.valueobjects.ValorMonetario;
 import com.example.fiap.archburgers.testUtils.RealDatabaseTestHelper;
 import org.junit.jupiter.api.*;
 
 import java.sql.SQLException;
 import java.time.LocalDateTime;
-import java.util.Collections;
 import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
@@ -52,11 +48,17 @@ class PedidoRepositoryJdbcImplIT {
     void getPedido() {
         var pedido = repository.getPedido(1);
 
-        assertThat(pedido).isEqualTo(Pedido.pedidoRecuperado(1, null, "Cliente Erasmo",
-                Collections.emptyList(), "Sem cebola", StatusPedido.RECEBIDO,
-                IdFormaPagamento.DINHEIRO,
-                LocalDateTime.of(2024, 5, 18, 15, 30, 12))
-        );
+        assertThat(pedido.id()).isEqualTo(1);
+        assertThat(pedido.idClienteIdentificado()).isNull();
+        assertThat(pedido.nomeClienteNaoIdentificado()).isEqualTo("Cliente Erasmo");
+        assertThat(pedido.status()).isEqualTo(StatusPedido.RECEBIDO);
+        assertThat(pedido.observacoes()).isEqualTo("Sem cebola");
+        assertThat(pedido.formaPagamento()).isEqualTo(IdFormaPagamento.DINHEIRO);
+        assertThat(pedido.dataHoraPedido()).isEqualTo(LocalDateTime.of(2024, 5, 18, 15, 30, 12));
+
+        assertThat(pedido.itens()).hasSize(2);
+        assertThat(pedido.itens()).contains(new ItemPedido(1, 1));
+        assertThat(pedido.itens()).contains(new ItemPedido(2, 5));
     }
 
     @Test
@@ -76,7 +78,7 @@ class PedidoRepositoryJdbcImplIT {
         assertThat(saved).isEqualTo(pedido.withId(saved.id()));
 
         var loaded = repository.getPedido(saved.id());
-        assertThat(loaded).isEqualTo(saved.withItens(List.of()));
+        assertThat(loaded).isEqualTo(saved);
 
         try (var conn = databaseConnection.jdbcConnection();
              var stmt = conn.prepareStatement("select item_cardapio_id,num_sequencia from pedido_item where pedido_id = ?")) {
@@ -103,13 +105,19 @@ class PedidoRepositoryJdbcImplIT {
         assertThat(pedidos.size()).isGreaterThanOrEqualTo(2);
 
         assertThat(pedidos).contains(Pedido.pedidoRecuperado(1, null, "Cliente Erasmo",
-                Collections.emptyList(), "Sem cebola", StatusPedido.RECEBIDO,
+                List.of(
+                        new ItemPedido(1, 1),
+                        new ItemPedido(2, 5)
+                ), "Sem cebola", StatusPedido.RECEBIDO,
                 IdFormaPagamento.DINHEIRO,
                 LocalDateTime.of(2024, 5, 18, 15, 30, 12))
         );
 
         assertThat(pedidos).contains(Pedido.pedidoRecuperado(2, null, "Paulo Sérgio",
-                Collections.emptyList(), null, StatusPedido.PRONTO,
+                List.of(
+                        new ItemPedido(1, 3),
+                        new ItemPedido(2, 7)
+                ), null, StatusPedido.PRONTO,
                 IdFormaPagamento.DINHEIRO,
                 LocalDateTime.of(2024, 5, 18, 15, 30, 12))
         );
@@ -123,28 +131,38 @@ class PedidoRepositoryJdbcImplIT {
         assertThat(pedidos.size()).isGreaterThanOrEqualTo(3);
 
         var indexRecebido = pedidos.indexOf(Pedido.pedidoRecuperado(1, null, "Cliente Erasmo",
-                Collections.emptyList(), "Sem cebola", StatusPedido.RECEBIDO,
+                List.of(
+                        new ItemPedido(1, 1),
+                        new ItemPedido(2, 5)
+                ), "Sem cebola", StatusPedido.RECEBIDO,
                 IdFormaPagamento.DINHEIRO,
                 LocalDateTime.of(2024, 5, 18, 15, 30, 12))
         );
         assertThat(indexRecebido).isGreaterThanOrEqualTo(0);
 
         var indexProntoNewer = pedidos.indexOf(Pedido.pedidoRecuperado(2, null, "Paulo Sérgio",
-                Collections.emptyList(), null, StatusPedido.PRONTO,
+                List.of(
+                        new ItemPedido(1, 3),
+                        new ItemPedido(2, 7)
+                ), null, StatusPedido.PRONTO,
                 IdFormaPagamento.DINHEIRO,
                 LocalDateTime.of(2024, 5, 18, 15, 30, 12))
         );
         assertThat(indexProntoNewer).isGreaterThanOrEqualTo(0);
 
         var indexEmPreparacao = pedidos.indexOf(Pedido.pedidoRecuperado(3, null, "Vanusa",
-                Collections.emptyList(), null, StatusPedido.PREPARACAO,
+                List.of(
+                        new ItemPedido(1, 2)
+                ), null, StatusPedido.PREPARACAO,
                 IdFormaPagamento.DINHEIRO,
                 LocalDateTime.of(2024, 5, 17, 15, 30, 12))
         );
         assertThat(indexEmPreparacao).isGreaterThanOrEqualTo(0);
 
         var indexProntoOlder = pedidos.indexOf(Pedido.pedidoRecuperado(4, null, "Ronnie",
-                Collections.emptyList(), null, StatusPedido.PRONTO,
+                List.of(
+                        new ItemPedido(1, 1)
+                ), null, StatusPedido.PRONTO,
                 IdFormaPagamento.DINHEIRO,
                 LocalDateTime.of(2024, 5, 17, 14, 30, 12))
         );
@@ -177,7 +195,7 @@ class PedidoRepositoryJdbcImplIT {
                 LocalDateTime.of(2024, 5, 19, 10, 10, 0));
 
         assertThat(pedidos).doesNotContain(p1);
-        assertThat(pedidos).contains(p2.withItens(Collections.emptyList())); // Itens are not present when only the root object is loaded
+        assertThat(pedidos).contains(p2);
     }
 
     @Test
